--- a/app/src/main/res/layout/activity_phone_otp.xml
+++ b/app/src/main/res/layout/activity_phone_otp.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:scrollbars="none"
     android:overScrollMode="never"
-    tools:context=".Authentication.PhoneOTPActivity">
+    tools:context=".authentication.PhoneOTPActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
