--- a/app/src/main/res/layout/activity_edit_profile_patient.xml
+++ b/app/src/main/res/layout/activity_edit_profile_patient.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".activity.EditProfileActivity">
+    tools:context=".activity.patient.EditProfileActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
