--- a/app/src/main/res/layout/activity_phone_otp.xml
+++ b/app/src/main/res/layout/activity_phone_otp.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:scrollbars="none"
     android:overScrollMode="never"
-    tools:context=".authentication.PhoneOTPActivity">
+    tools:context=".authentication.patient.PhoneOTPActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -118,6 +118,41 @@
                 android:layout_gravity="center" />
 
         </FrameLayout>
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginStart="135dp"
+               android:layout_marginTop="8dp"
+               android:textSize="16sp"
+               android:textColor="@color/colorBlack"
+               android:text="@string/sign_up_as_a"
+               android:fontFamily="@font/ubuntu_medium"
+               android:includeFontPadding="false"/>
+
+           <TextView
+               android:id="@+id/textDoctor"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginStart="5dp"
+               android:background="?selectableItemBackground"
+               android:clickable="true"
+               android:focusable="true"
+               android:padding="6dp"
+               android:layout_marginTop="8dp"
+               android:gravity="center"
+               android:text="@string/doctor"
+               android:textSize="16sp"
+               android:textColor="@android:color/holo_red_dark"
+               android:fontFamily="@font/ubuntu_bold"
+               android:includeFontPadding="false"/>
+
+       </LinearLayout>
 
     </LinearLayout>
 
