--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -5,7 +5,7 @@
     android:id="@+id/scrollViewVerify"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".authentication.VerifyPhoneActivity">
+    tools:context=".authentication.patient.VerifyPhoneActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
