--- a/app/src/main/res/layout/fragment_profile_patient.xml
+++ b/app/src/main/res/layout/fragment_profile_patient.xml
@@ -33,9 +33,10 @@
             android:id="@+id/imageProfileProfile"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="80dp"
             android:contentDescription="@string/user_image"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textHello" />
 
