--- a/app/src/main/res/layout/activity_email_register.xml
+++ b/app/src/main/res/layout/activity_email_register.xml
@@ -200,6 +200,35 @@
                         android:layout_marginEnd="8dp"
                         android:fontFamily="@font/ubuntu_regular"
                         android:includeFontPadding="false"
+                        android:text="@string/specialization"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textSize="12sp"/>
+
+                    <EditText
+                        android:id="@+id/inputSpecialization"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:background="@null"
+                        android:fontFamily="@font/ubuntu_regular"
+                        android:hint="@string/dummy_specialization"
+                        android:imeOptions="actionNext"
+                        android:importantForAutofill="no"
+                        android:includeFontPadding="false"
+                        android:inputType="textEmailAddress"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textColorHint="@color/colorHintText"
+                        android:textSize="13sp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:fontFamily="@font/ubuntu_regular"
+                        android:includeFontPadding="false"
                         android:text="@string/gender"
                         android:textColor="@color/colorPrimaryText"
                         android:textSize="12sp"/>
@@ -212,7 +241,7 @@
                         android:layout_marginEnd="8dp"
                         android:background="@null"
                         android:fontFamily="@font/ubuntu_regular"
-                        android:hint="Female"
+                        android:hint="@string/dummy_gender_"
                         android:imeOptions="actionNext"
                         android:importantForAutofill="no"
                         android:includeFontPadding="false"
