--- a/app/src/main/res/layout/fragment_profile_patient.xml
+++ b/app/src/main/res/layout/fragment_profile_patient.xml
@@ -15,13 +15,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textHello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/ubuntu_bold"
             android:includeFontPadding="false"
-            android:text="@string/profile"
+            android:text="@string/patient_s_profile"
             android:textColor="@color/colorWhite"
             android:textSize="20sp"
             android:textStyle="bold"
