--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_toEndOf="@id/imageProfileNotification"
-        android:layout_toStartOf="@id/imagePostNotification">
+        android:layout_toStartOf="@id/textIssueType">
 
         <TextView
             android:id="@+id/textUserNameNotification"
@@ -29,7 +29,7 @@
             android:textColor="@color/colorBlack"/>
 
         <TextView
-            android:id="@+id/textCommentNotification"
+            android:id="@+id/textIssue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/issue"
@@ -40,7 +40,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/imagePostNotification"
+        android:id="@+id/textIssueType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sp02"
