--- a/app/src/main/res/drawable/round_corners.xml
+++ b/app/src/main/res/drawable/round_corners.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="8dp"/>
-    <solid android:color="@color/colorBlack"/>
+    <solid android:color="@color/colorWhite"/>
     <stroke android:width="1dp"
-        android:color="@color/colorWhite"/>
+        android:color="@color/colorBlack"/>
 
 </shape>
