--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".activity.doctor.MainActivityDoctor">
 
+    <FrameLayout
+        android:id="@+id/fragmentContainerDoctor"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationViewDoctor"/>
+
+
+    <com.ismaeldivita.chipnavigation.ChipNavigationBar
+        android:id="@+id/bottomNavigationViewDoctor"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        app:cnb_menuResource="@menu/main_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/round_corners"
+        app:cnb_unselectedColor="@color/colorBlack"
+        app:cnb_orientationMode="horizontal"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+        android:elevation="8dp"
+        app:cnb_radius="8dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
