--- a/app/src/main/res/layout/fragment_profile_patient.xml
+++ b/app/src/main/res/layout/fragment_profile_patient.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/textPatient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -37,7 +38,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textHello" />
+            app:layout_constraintTop_toBottomOf="@+id/textPatient" />
 
         <TextView
             android:id="@+id/textUsernameTop"
