--- a/app/src/main/res/layout/fragment_notification_doctor.xml
+++ b/app/src/main/res/layout/fragment_notification_doctor.xml
@@ -19,13 +19,20 @@
         android:layout_marginBottom="12dp"
         android:layout_marginTop="12dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshNotification"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/notification_item"
-        android:layout_below="@id/text"
-        tools:itemCount="7"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/notification_item"
+            tools:itemCount="7"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
