--- a/app/src/main/res/layout/activity_edit_profile_doctor.xml
+++ b/app/src/main/res/layout/activity_edit_profile_doctor.xml
@@ -73,7 +73,7 @@
                 </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/textEditProfile"
+                    android:id="@+id/textEditProfileDoctor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/edit_profile"
@@ -107,7 +107,7 @@
         android:padding="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageProfileEditProfile"
+            android:id="@+id/imageProfileEditProfileDoctor"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@mipmap/ic_launcher"
@@ -116,7 +116,7 @@
 
 
         <TextView
-            android:id="@+id/textChange"
+            android:id="@+id/textChangeDoctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/change_photo"
@@ -137,7 +137,7 @@
             android:hint="@string/fullname">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edittextFullNameEditProfile"
+                android:id="@+id/edittextFullNameEditProfileDoctor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
