--- a/app/src/main/res/layout/activity_incoming_invitation.xml
+++ b/app/src/main/res/layout/activity_incoming_invitation.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/textFirstChar"
+            android:id="@+id/imageProfileIncoming"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:fontFamily="@font/ubuntu_bold"
@@ -77,6 +77,7 @@
         android:layout_marginBottom="50dp"
         android:contentDescription="@string/app_name"
         android:padding="8dp"
+        app:tint="@color/colorWhite"
         android:background="@drawable/background_accept_invitation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -90,6 +91,7 @@
         android:layout_marginBottom="50dp"
         android:contentDescription="@string/app_name"
         android:padding="8dp"
+        app:tint="@color/colorWhite"
         android:background="@drawable/background_reject_invitation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
