--- a/app/src/main/res/layout/activity_outgoing_invitation.xml
+++ b/app/src/main/res/layout/activity_outgoing_invitation.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_meeting_invitation"
-    tools:context=".Activities.OutgoingInvitationActivity">
+    tools:context=".calls.OutgoingInvitationActivity">
 
     <ImageView
         android:id="@+id/imageMeetingType"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="50dp"
         android:contentDescription="@string/app_name"
-        app:tint="@color/colorTextIcons"
+        app:tint="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -26,8 +26,8 @@
         android:gravity="center"
         android:includeFontPadding="false"
         android:text="@string/sending_meeting_invitation"
-        android:textColor="@color/colorTextIcons"
-        android:textSize="@dimen/_15ssp"
+        android:textColor="@color/colorWhite"
+        android:textSize="15sp"
         app:layout_constraintTop_toBottomOf="@+id/imageMeetingType" />
 
     <LinearLayout
@@ -38,52 +38,49 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textFirstChar"
-            android:layout_width="@dimen/_60sdp"
-            android:layout_height="@dimen/_60sdp"
-            android:background="@drawable/background_meeting_invitation_user_icon"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageUser"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:fontFamily="@font/ubuntu_bold"
             android:gravity="center"
             android:includeFontPadding="false"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimaryText"
-            android:textSize="@dimen/_30ssp"/>
+            android:textSize="30sp"/>
 
         <TextView
             android:id="@+id/textUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/ubuntu_bold"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:textColor="@color/colorTextIcons"
-            android:textSize="@dimen/_18ssp"/>
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/textEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_6sdp"
+            android:layout_marginTop="6dp"
             android:fontFamily="@font/ubuntu_regular"
             android:includeFontPadding="false"
             android:gravity="center"
-            android:textColor="@color/colorTextIcons"
-            android:textSize="@dimen/_11ssp"/>
+            android:textSize="12sp"/>
 
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imageStopInvitation"
-        android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_reject"
-        android:layout_marginBottom="@dimen/_50sdp"
+        android:layout_marginBottom="50dp"
         android:contentDescription="@string/app_name"
-        android:padding="@dimen/_8sdp"
+        android:padding="8dp"
         android:background="@drawable/background_reject_invitation"
-        app:tint="@color/colorTextIcons"
+        app:tint="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
