--- a/app/src/main/res/layout/fragment_home_doctor.xml
+++ b/app/src/main/res/layout/fragment_home_doctor.xml
@@ -6,6 +6,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.doctor.HomeFragmentDoctor">
 
+      <TextView
+          android:id="@+id/text"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="@string/patients"
+          android:textSize="20sp"
+          android:textAllCaps="true"
+          android:textColor="@color/colorBlack"
+          android:fontFamily="@font/ubuntu_bold"
+          android:gravity="center"
+          android:layout_marginBottom="12dp"
+          android:layout_marginTop="12dp"/>
+
+      <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+          android:id="@+id/swipeRefreshHome"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_below="@id/text">
+
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recyclerView"
           android:layout_width="match_parent"
@@ -13,5 +32,7 @@
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           tools:listitem="@layout/doctor_home_item"
           tools:itemCount="7"/>
+
+      </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
