--- a/app/src/main/res/layout/activity_outgoing_invitation.xml
+++ b/app/src/main/res/layout/activity_outgoing_invitation.xml
@@ -27,7 +27,7 @@
         android:includeFontPadding="false"
         android:text="@string/sending_meeting_invitation"
         android:textColor="@color/colorWhite"
-        android:textSize="15sp"
+        android:textSize="17sp"
         app:layout_constraintTop_toBottomOf="@+id/imageMeetingType" />
 
     <LinearLayout
@@ -40,8 +40,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageUser"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:fontFamily="@font/ubuntu_bold"
             android:gravity="center"
             android:includeFontPadding="false"
@@ -56,25 +56,16 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/ubuntu_bold"
             android:gravity="center"
+            android:textColor="@color/colorWhite"
             android:includeFontPadding="false"
-            android:textSize="18sp"/>
-
-        <TextView
-            android:id="@+id/textEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:fontFamily="@font/ubuntu_regular"
-            android:includeFontPadding="false"
-            android:gravity="center"
-            android:textSize="12sp"/>
+            android:textSize="22sp"/>
 
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imageStopInvitation"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/ic_reject"
         android:layout_marginBottom="50dp"
         android:contentDescription="@string/app_name"
