--- a/app/src/main/res/layout/fragment_home_patient.xml
+++ b/app/src/main/res/layout/fragment_home_patient.xml
@@ -490,6 +490,16 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/panickButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PANICK"
+                android:layout_margin="20dp"
+                app:backgroundTint="@android:color/holo_red_dark"
+                android:fontFamily="@font/ubuntu_bold"
+                android:visibility="gone"/>
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layoutTips"
                 android:layout_width="match_parent"
