--- a/app/src/main/res/layout/fragment_profile_doctor.xml
+++ b/app/src/main/res/layout/fragment_profile_doctor.xml
@@ -85,6 +85,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutHeader">
 
