--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,26 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#C8C8C8"
+    android:background="#0D0D0D"
     tools:context=".activity.SplashActivity">
 
-    <ImageView
-        android:id="@+id/lottieAnimation"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/mobidoc_logo"
-        android:layout_centerInParent="true" />
+        <ImageView
+            android:id="@+id/lottieAnimation"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/logo"
+            android:elevation="2dp"
+            android:layout_centerInParent="true" />
 
-    <ImageView
-        android:id="@+id/imageHeart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/app_splash"
-        android:padding="70dp"
-        android:layout_below="@id/lottieAnimation"
-        android:contentDescription="@string/app_name"
-        android:layout_centerInParent="true"
-        android:gravity="center_horizontal"/>
+        <ImageView
+            android:id="@+id/imageHeart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/app_splash"
+            android:padding="70dp"
+            android:elevation="2dp"
+            android:layout_below="@id/lottieAnimation"
+            android:contentDescription="@string/app_name"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"/>
+
+
 
 </RelativeLayout>
