--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="endColor">#364CB6</color>
     <color name="colorMeetingInvitationEnd">#0D6FC5</color>
     <color name="colorMeetingInvitationStart">#0B04F0</color>
+    <color name="firstIntroColor">#294CF8</color>
+    <color name="secondIntroColor">#40AF6D</color>
+    <color name="thirdIntroColor">#C356BD</color>
 </resources>
