--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,22 +10,8 @@
             android:id="@+id/lottieAnimation"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:src="@drawable/md"
+            android:src="@drawable/firebase"
             android:elevation="2dp"
             android:layout_centerInParent="true" />
-
-        <ImageView
-            android:id="@+id/imageHeart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/words"
-            android:padding="70dp"
-            android:elevation="2dp"
-            android:layout_below="@id/lottieAnimation"
-            android:contentDescription="@string/app_name"
-            android:layout_centerInParent="true"
-            android:gravity="center_horizontal"/>
-
-
 
 </RelativeLayout>
